x.y.z
=====

Release date:

New features:

* Implement MIDI transport events
  - Noteahead now sends MIDI Start/Stop

Bug fixes:

* Fix GitHub Issue #14: Rewinding a song assumes that track with index 0 exists

Other:

0.9.0
=====

Release date:

Tue, 10 Jun 2025 22:14:09 +0300

New features:

* Render lines in a ListView instead of manually managed objects
  - This is a big and fundamental refactoring effort and makes scrolling
    way smoother also on older Qt version. Also the update logic is now less
    prone to bugs as more stuff is handled by the view model in C++.

* Implement Midi CC and Pitch Bend automations for single lines

Bug fixes:

* Fix duplicate signal names on Qt 6.8

* Fix GitHub Issue #4: Crash in Flatpak: std::optional<noteahead::Position> not engaged

* Don't reinitialize the project when RecentFilesDialog canceled
  - A previously loaded project was also discarded without asking

Other:

* Make pattern spin box editable

* Addition of Flatpak manifest

0.8.0
=====

Release date:

Thu, 29 May 2025 21:04:33 +0300

New features:

* Add menu action to stop all notes

Bug fixes:

* When stopping all notes, stop only the notes that are actually playing
  - Noticed that e.g. Behringer Solina Ensemble goes crazy if a bunch of
    non-playing notes are stopped

* Fix incorrect call to _createLines()

Other:

* CMake: Move Debian packaging to cmake/DebianPackagingDefaultQt.cmake

0.7.0
=====

Release date:

Sat, 24 May 2025 22:17:33 +0300

New features:

* Add an example project file

* Immediately update recent files on save as and save as template

* Set status bar message when automations added

* Implement basic Pitch Bend automations with linear interpolation
  - Select lines => Right click => Add Pitch Bend automation
  - Edit via Right click => Edit Pitch Bend automations

* Make it possible to force window size with --window-size

* Implement filtering for MIDI CC automations